force-app/main/default/objects/LP_Waiver__c/LP_Waiver__c.object-meta.xml
<CustomObject>
    <label>LP Waiver</label>
    <nameField>
        <displayFormat>LPW-{0000000}</displayFormat>
        <label>LP Waiver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LP Waiver</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>