force-app/main/default/objects/LP_Waiver__c/fields/Amount_Towards_Late_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Amount_Towards_Late_Penalty__c</fullName>
    <label>Amount Towards Late Penalty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>