force-app/main/default/objects/LP_Waiver__c/fields/ApproverID__c.field-meta.xml
<CustomField>
    <fullName>ApproverID__c</fullName>
    <label>ApproverID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>