force-app/main/default/objects/LP_Waiver__c/fields/Demand__c.field-meta.xml
<CustomField>
    <fullName>Demand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demand</label>
    <referenceTo>Demand__c</referenceTo>
    <relationshipLabel>LP Waiver</relationshipLabel>
    <relationshipName>LP_Waiver</relationshipName>
    <type>Lookup</type>
</CustomField>