force-app/main/default/objects/LP_Waiver__c/fields/LP_Amount_To_Be_Waived__c.field-meta.xml
<CustomField>
    <fullName>LP_Amount_To_Be_Waived__c</fullName>
    <label>LP Amount To Be Waived</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>