force-app/main/default/objects/LP_Waiver__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>LP Waiver</relationshipLabel>
    <relationshipName>LP_Waiver</relationshipName>
    <type>Lookup</type>
</CustomField>