force-app/main/default/objects/LP_Waiver__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected by Collection Head</fullName>
            </value>
            <value>
                <fullName>Pending for Collection Head Approval</fullName>
                <default>true</default>
                <label>Pending for Collection Head Approval</label>
            </value>
            <value>
                <fullName>Approved by MDO/CMO</fullName>
            </value>
            <value>
                <fullName>Rejected by MDO/CMO</fullName>
            </value>
            <value>
                <fullName>Pending for MDO/CMO</fullName>
            </value>
            <value>
                <fullName>Rejected By CRM Head</fullName>
            </value>
            <value>
                <fullName>Pending For CRM Head Approval</fullName>
            </value>
            <value>
                <fullName>Approved By CRM Head</fullName>
            </value>
            <value>
                <fullName>Approved by Audit</fullName>
                <isActive>false</isActive>
                <label>Approved by Audit</label>
            </value>
            <value>
                <fullName>Pending for Accounts Approval</fullName>
                <isActive>false</isActive>
                <label>Pending for Accounts Approval</label>
            </value>
            <value>
                <fullName>Pending for Audit Approval</fullName>
                <isActive>false</isActive>
                <label>Pending for Audit Approval</label>
            </value>
            <value>
                <fullName>Rejected by Accounts</fullName>
                <isActive>false</isActive>
                <label>Rejected by Accounts</label>
            </value>
            <value>
                <fullName>Rejected by Audit</fullName>
                <isActive>false</isActive>
                <label>Rejected by Audit</label>
            </value>
            <value>
                <fullName>Rejected by Audit &amp; Submitted to Accounts</fullName>
                <isActive>false</isActive>
                <label>Rejected by Audit &amp; Submitted to Accounts</label>
            </value>
            <value>
                <fullName>Rejected by Audit &amp; Submitted to Accounts &amp; Collection</fullName>
                <isActive>false</isActive>
                <label>Rejected by Audit &amp; Submitted to Accounts &amp; Collection</label>
            </value>
            <value>
                <fullName>Resubmitted to Accounts</fullName>
                <isActive>false</isActive>
                <label>Resubmitted to Accounts</label>
            </value>
            <value>
                <fullName>Resubmitted to Audit</fullName>
                <isActive>false</isActive>
                <label>Resubmitted to Audit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>