force-app/main/default/objects/LP_Waiver__c/listViews/Pending_For_Collection_Head.listView-meta.xml
<ListView>
    <fullName>Pending_For_Collection_Head</fullName>
    <columns>NAME</columns>
    <columns>Demand__c</columns>
    <columns>Booking__c</columns>
    <columns>Remarks__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Pending For Collection Head</label>
</ListView>