force-app/main/default/objects/LP_Waiver__c/listViews/Pending_For_MDO_CMO.listView-meta.xml
<ListView>
    <fullName>Pending_For_MDO_CMO</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Demand__c</columns>
    <columns>Remarks__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending for MDO/CMO</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/1/2023 12:00 AM</value>
    </filters>
    <label>Pending For MDO/CMO</label>
</ListView>